<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ScrollView
        android:id="@+id/editScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/userNameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:text="Magda"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/formLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTitleTextView">

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/username_text"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/rudy"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    android:textColor="@color/rudy"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/email_title"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/instrumentsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/instrument_text"
                    android:textColor="@color/rudy"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instrumentEditText"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/instrument_hint"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/levelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/experience_level_text"
                    android:textColor="@color/rudy"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/levelSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:entries="@array/level_list"
                    android:prompt="@string/level_prompt" />

                <TextView
                    android:id="@+id/statusTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/status_title"
                    android:textColor="@color/rudy"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/expirienceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:entries="@array/status_list"
                    android:prompt="@string/status_prompt" />

                <CheckBox
                    android:id="@+id/rehearsalSpaceCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:textColor="@color/rudy"
                    android:textStyle="bold"
                    android:text="@string/rehearsal_space" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/localizationSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/rudy"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/localisation_switch_text" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_bg"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:text="@string/save_button" />

                <Button
                    android:id="@+id/signOutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_bg"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:text="@string/sign_out_button" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu" />

</LinearLayout>